# imager

./: .gitignore  Cargo.toml  LICENSE  README.md  docs
.github/: FUNDING.yml
classifier/: Cargo.toml  README.md
classifier/assets/: .gitignore
classifier/data/: .gitignore
classifier/src/: auto.rs  classify.rs  main.rs  process.rs
classifier/src/codec/: jpeg.rs  mod.rs
classifier/src/color/: format.rs  mod.rs  palette.rs  quant.rs
classifier/src/color/palette/: colourado.rs
classifier/src/debug/: color_palette.rs  mod.rs
docs/: README.md  imager-nodejs.md  imager-opt.md  imager-server.md
docs/imager/: install.md
extras/: README.md
extras/imager-jpeg2000/: Cargo.toml  README.md
extras/imager-png/: Cargo.toml
extras/imager-webp/: Cargo.toml  build.rs
extras/imager-webp/cbits/: utils.c
extras/imager-webp/src/: main.rs
extras/imager-webp/src/ffi/: misc.rs  mod.rs
extras/imager-webp/src/ffi/cbits/: decoder.rs  encoder.rs  mod.rs  utils.rs
extras/jpeg2000/: Cargo.toml
extras/sys-deps/webp-dev/: Cargo.toml
extras/sys-deps/webp-dev/cbits/: encoder.c
extras/sys-deps/webp-dev/src/ffi/: imageio.rs  webp.rs
imager/: .gitignore  Cargo.toml  Dockerfile  README.md
imager-av/: Cargo.toml
imager-av/src/: buffer.rs  lib.rs  vmaf.rs
imager-av/src/frontend/: mod.rs
imager-ffmpeg/: Cargo.toml
imager-ffmpeg/src/: av.rs  dec.rs  demux.rs  format.rs  lib.rs  main.rs  mux.rs
imager-ffmpeg/src/format/: data.rs  decode.rs  mod.rs
imager-jpeg/: Cargo.toml
imager-jpeg/src/: jpeg_opt.rs  main.rs
imager-jpeg/src/utils/: media.rs
imager-png/: Cargo.toml
imager-png/scripts/: .gitignore
imager-png/src/: lib.rs  main.rs  opt.rs  png.rs
imager-rs/: AUTHOR  Dockerfile
imager-rs/scripts/: install.sh
imager-rs/scripts/docker/: build.sh  debug.sh  run.sh
imager-rs/src/: api.rs  lib.rs  main.rs
imager-rs/src/cli/: mod.rs  server.rs
imager-rs/src/tool/: mod.rs  vmaf.rs
imager-server/: Cargo.toml
imager-server/src/: main.rs  server.rs
imager-video/: Cargo.toml  README.md
imager-video/src/: data.rs  main.rs
imager-video/src/codec/: h264.rs  mod.rs
imager-video/src/format/: decode.rs  mod.rs
imager-video/src/tool/: classifier.rs  mod.rs  vmaf.rs
imager-webp/: Cargo.toml
imager-webp/src/: decode.rs  lib.rs  opt.rs
imager-webp/src/encode/: lossless.rs  lossy.rs
imager-x264/: Cargo.toml
imager-x264/assets/: .gitignore
imager-x264/src/: enc.rs  encoder.rs  main.rs  search.rs  stream.rs  vmaf.rs  yuv420p.rs
imager/assets/: .gitignore
imager/scripts/: build-release.sh  install-local.sh
imager/scripts/docker/: build.sh  debug.sh  run.sh
imager/src/: api.rs  classifier.rs  data.rs  lib.rs  main.rs  opt.rs  server.rs  vmaf.rs
imager/src/cli/: mod.rs  opt.rs  server.rs
imager/src/codec/: jpeg.rs  jpeg_opt.rs  mod.rs  png.rs
imager/src/codec/webp/: decode.rs  mod.rs  opt.rs
imager/src/codec/webp/encode/: lossless.rs  lossy.rs  mod.rs
imager/src/tool/: mod.rs  mozjpeg.rs
imager/src/utils/: media.rs
plugins/: README.md
ports/: README.md
ports/imager-nodejs/: .babelrc  .gitignore  Cargo.toml  LICENSE  package.json  tsconfig.json
ports/imager-nodejs/scripts/: setup-mac.sh
ports/imager-nodejs/src/: lib.rs
ports/imager-nodejs/src/api/: mod.rs
ports/imager-nodejs/src/napi/: mod.rs
ports/nodejs/: .babelrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  binding.gyp  jest.config.js  package-lock.json  package.json
ports/nodejs/.cargo/: config
ports/nodejs/lib/: data.ts  index.test.ts  index.ts  main.ts  sys.ts
ports/nodejs/scripts/: build-rust.sh  publish.sh  setup-mac.sh
ports/nodejs/scripts/docker/: build.sh  run.sh
ports/nodejs/src/: api.rs  lib.rs
ports/nodejs/src/api/: data.rs  imager.rs
ports/nodejs/src/napi/: sys.rs  utils.rs
src/: buffer.rs  classifier.rs  data.rs  jpeg.rs  main.rs  png.rs  vmaf.rs
src/cli/: mod.rs  opt.rs
src/tool/: classifier.rs  vmaf.rs
src/utils/: media.rs  mod.rs
sys-deps/webp-dev/: .gitignore  Cargo.toml  LICENSE  build.rs  debug.txt
sys-deps/webp-dev/cbits/: decoder.c  encoder.c
sys-deps/webp-dev/src/: cbits.rs  ffi.rs  lib.rs
sys-deps/webp-dev/src/ffi/: mod.rs
