[package]
name = "imager-engine"
version = "0.0.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/colbyn/imager"
homepage = "https://github.com/colbyn/imager"
description = "Brute force image optimization."
keywords = ["image", "optimization", "compression"]
publish = false

[dependencies]
libc = "^0.2"
mozjpeg-sys = "^0.10"
vmaf-sys = "0.0.10"
colourado = "0.2.0"
glob = "^0.3"
image = "^0.22"
imageproc = "^0.19"
clap = "^2.33"
structopt = "^0.2"
rand = "^0.7"
rayon = "1.1.0"
either = {version = "^1", features = ["serde"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
exoquant = "0.2.0"
lodepng = "0.8.1"
