[package]
name = "classifier"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"

[dependencies]
image = "0.23"
imageproc = "0.20"
libc = "^0.2"
rand = "0.7.3"
glob = "0.3.0"
rayon = "1.3.0"
mozjpeg-sys = "^0.10"
itertools = "0.8.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
exoquant = "0.2.0"
lodepng = "2.5.0"
hsl-ish = "0.1.0"
av-metrics = { version = "0.4", features = ["serde"] }
y4m = "0.5"
dcv-color-primitives = "0.1.4"
lazy_static = "1.4.0"
