[package]
name = "classifier"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
libc = "0.2.93"
rand = "0.7.3"
glob = "0.3.0"
rayon = "1.5.0"
mozjpeg-sys = "0.10.13"
itertools = "0.10.0"
serde = {version = "1.0.25", features = ["derive"]}
serde_json = "1.0.64"
exoquant = "0.2.0"
lodepng = "3.4.5"
hsl-ish = "0.1.0"
av-metrics = { version = "0.4.0", features = ["serde"] }
y4m = "0.5.3"
dcv-color-primitives = "0.2.0"
lazy_static = "1.4.0"
