[package]
name = "imager-jpeg"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/imager-io/imager-core"
homepage = "https://github.com/imager-io/imager-core"
description = "Imager - JPEG support."
keywords = ["image"]
exclude = ["assets"]

[dependencies]
libc = "^0.2"
mozjpeg-sys = "^0.10"
rayon = "1.1.0"
itertools = "0.8.0"
image = "^0.22"
serde = {version = "^1.0", features = ["derive"]}
imager-av = "0.2.0"