[package]
name = "imager-png"
version = "0.0.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/imager-io/imager-core"
homepage = "https://github.com/imager-io/imager-core"
description = "Imager - PNG support."
keywords = ["image"]
exclude = ["assets"]
publish = false

[dependencies]
exoquant = "0.2.0"
lodepng = "2.5.0"
image = "^0.22"
png = "0.15.1"
imager-av = "0.3.0"