[package]
name = "imager-server"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
publish = false

[dependencies]
imager = "0.0.6"
clap = "^2.33"
structopt = "^0.2"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
actix-web = "1.0.8"
futures = "0.1.29"
http = "0.1.18"
