[package]
name = "imager-webp"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
publish = false

[dependencies]
libc = "^0.2"
image = "^0.22"
webp-dev = "0.3.0"
itertools = "0.8.2"
imager-av = "0.3.0"
rayon = "1.2.1"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"