[package]
name = "imager"
version = "0.3.3"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/imager-io/imager"
homepage = "https://imager.io"
description = "Automated image compression; optimizes the compression using various heuristics."
keywords = ["image", "optimization", "compression"]
exclude = ["assets"]
readme = "README.md"

[dependencies]
libc = "^0.2"
mozjpeg-sys = "^0.10"
vmaf-sys = {version = "0.0.10"}
colourado = "0.2.0"
glob = "^0.3"
structopt = "0.3.5"
rand = "^0.7"
rayon = "1.1.0"
either = {version = "^1", features = ["serde"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
exoquant = "0.2.0"
lodepng = "2.5.0"
image = "^0.22"
imageproc = "^0.19"
png = "0.15.1"
rgb2yuv420 = "0.2.3"
webp-dev = "0.4.1"
indicatif = "0.12.0"

[features]
default = []
buildtype-docs-only = []

[package.metadata.docs.rs]
# no-default-features = true
features = ["buildtype-docs-only"]

# [profile.dev]
# opt-level = 2