[package]
name = "webp-dev"
version = "0.0.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
repository = "https://github.com/imager-io/imager"
license = "MIT"
description = "Webp FFI"

[features]
default = []
buildtype-docs-only = []

[package.metadata.docs.rs]
no-default-features = true
features = ["buildtype-docs-only"]

[dependencies]

[build-dependencies]
reqwest = "0.9.22"
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.50"